--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-   <form action="" style="padding: 30px;">
-    <fieldset style="background-color:darkmagenta; color:white"  style="margin: 10px;">
+<body style="display: flex; justify-content: center; align-items: center; height: 100vh; border-radius: 1rem;">
+   <form action="" style="padding: 30px; display: flex; border-radius: 1rem;">
+    <fieldset style="background-color:darkmagenta; color:white"  style="margin: 1px; border-radius: 1rem;">
         <label for="name">Name</label><br>
-        <input type="text" name="name" placeholder="Enter your name" id="name" value="" style="width: 100%;" / >
+        <input type="text" name="name" placeholder="Enter your name" id="name" value="" style="width: 100%; outline: none;" / >
         <br><br>
         <label for="email">Email</label><br>
-        <input type="text" name="email" placeholder="Enter your email" id="email" value="" style="width: 100%;" / >
+        <input type="text" name="email" placeholder="Enter your email" id="email" value="" style="width: 100%; outline: none;" / >
         <br><br>
         <label for="age">Age(optional)</label><br>
-        <input type="text" name="age" placeholder="Age" id="age" value="" style="width: 100%;" / >
+        <input type="text" name="age" placeholder="Age" id="age" value="" style="width: 100%; outline: none;" / >
         <br><br>
         <label for="year">what year are you in?</label><br>
         <input type="radio" name="year" id="year" value="fresh" />
@@ -48,9 +48,9 @@
         <br><br>
         <label for="sug">Any comments or suggestion?</label><br>
         <br>
-        <input type="text" name="sug" id="sug" style="height: 80px; width:100%">
+        <input type="text" name="sug" id="sug" style="height: 80px; width:100%; outline: none;">
         <br><br>
-        <input type="button" value="submit" name="submit" id="submit" style="width: 100%; background-color:green; color:white;">
+        <input type="button" value="submit" name="submit" id="submit" style="width: 100%; background-color:green; color:white; border: 0; outline: none; cursor: pointer; border-radius: 1rem;">
     </fieldset>
    </form>
 </body>
